Migrate tests from JUnit4 to JUnit5
Plus more (etcetera).